--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "firebase": "^10.13.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
+    "react-headroom": "^3.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
