--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "firebase": "^10.13.0",
+    "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
     "react-headroom": "^3.2.1",
     "react-image-gallery": "^1.3.0",
-    "react-photo-gallery": "^8.0.0"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
